--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <head>
 	<title>Image Gallery</title>
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<nav class="navbar navbar-inverse">
+	<nav class="navbar navbar-inverse navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -13,7 +14,7 @@
 			       	<span class="icon-bar"></span>
 			       	<span class="icon-bar"></span>
       			</button>
-				<a href="#" class="navbar-brand">Images</a>
+				<a href="#" class="navbar-brand"><span class="glyphicon glyphicon-picture" aria-hidden="true"> Images</a>
 			</div>
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
@@ -29,7 +30,7 @@
  	</nav>
 	<div class="container">
 		<div class="jumbotron">
-			<h1>The Image Gallery</h1>
+			<h1><span class="glyphicon glyphicon-camera" aria-hidden="true"></span> The Image Gallery</h1>
 			<p>A bunch of beautiful images that I didn't take!</p>
 		</div>
 		<div class="row">
