--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<title>Image Gallery</title>
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="https://use.fontawesome.com/7334d05688.js"></script>
 </head>
 <body>
 	<nav class="navbar navbar-inverse navbar-fixed-top">
@@ -30,7 +31,7 @@
  	</nav>
 	<div class="container">
 		<div class="jumbotron">
-			<h1><span class="glyphicon glyphicon-camera" aria-hidden="true"></span> The Image Gallery</h1>
+			<h1><i class="fa fa-camera-retro" aria-hidden="true"></i> The Image Gallery</h1>
 			<p>A bunch of beautiful images that I didn't take!</p>
 		</div>
 		<div class="row">
